--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,14 @@
-.trend__base-area {
-	fill: #f7d5d0;
-	fill-opacity: 0.4;
-}
-
-.trend__base-line {
-	fill: none;
-	stroke: #f7d5d0;
-	stroke-width: 1;
-}
-
-.trend__area {
-	fill: #f7d5d0;
-}
-
-.trend__line {
-	fill: none;
-	stroke: #e6532e;
-	stroke-width: 2;
-}
-
-.trend__axis .domain {
-	display: none;
-}
-
-.trend__axis .tick text {
-	color: #586f7a;
-}
-
-.trend__x-axis .tick:last-of-type text {
-	text-anchor: end;
-}
-
-.trend__y-axis line {
-	stroke-dasharray: 3, 3;
-	stroke: #d3dfe6;
-}
-
-.covid_line_chart{
-	height: 500px;
+.main_line_chart{
+	height: 90vh;
 	width: auto;
+}
+
+.filter_options {
+	min-width: 200px;
+	min-height: 200px;
+	height: 250px;
+}
+
+#root{
+	margin: 5px;
 }
